; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/wpa/src/pae/extr_ieee802_1x_cp.c_ieee802_1x_cp_set_offset.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/wpa/src/pae/extr_ieee802_1x_cp.c_ieee802_1x_cp_set_offset.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ieee802_1x_cp_sm = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ieee802_1x_cp_set_offset(i8* %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.ieee802_1x_cp_sm*, align 8
  store i8* %0, i8** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load i8*, i8** %3, align 8
  %7 = bitcast i8* %6 to %struct.ieee802_1x_cp_sm*
  store %struct.ieee802_1x_cp_sm* %7, %struct.ieee802_1x_cp_sm** %5, align 8
  %8 = load i32, i32* %4, align 4
  %9 = load %struct.ieee802_1x_cp_sm*, %struct.ieee802_1x_cp_sm** %5, align 8
  %10 = getelementptr inbounds %struct.ieee802_1x_cp_sm, %struct.ieee802_1x_cp_sm* %9, i32 0, i32 0
  store i32 %8, i32* %10, align 4
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
